// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`edit path base props 1`] = `
<Page
  breadcrumbAction={
    Object {
      "Component": [Function],
      "content": "Subaccounts",
      "to": "/account/subaccounts",
    }
  }
  empty={Object {}}
  title="Bob Evans, the restaurant. (123)"
>
  <Tabs
    connectBelow={true}
    selected={0}
    tabs={
      Array [
        Object {
          "Component": Object {},
          "content": "Details",
          "to": "/account/subaccounts/123",
        },
        Object {
          "Component": Object {},
          "content": "API Keys",
          "to": "/account/subaccounts/123/api-keys",
        },
      ]
    }
  />
  <Switch>
    <Route
      exact={true}
      path="/account/subaccounts/123"
      render={[Function]}
    />
    <Route
      path="/account/subaccounts/123/api-keys"
      render={[Function]}
    />
  </Switch>
</Page>
`;

exports[`edit path loading 1`] = `
<Page
  breadcrumbAction={
    Object {
      "Component": [Function],
      "content": "Subaccounts",
      "to": "/account/subaccounts",
    }
  }
  empty={Object {}}
  title="loading..."
>
  <Tabs
    connectBelow={true}
    selected={0}
    tabs={
      Array [
        Object {
          "Component": Object {},
          "content": "Details",
          "to": "/account/subaccounts/123",
        },
        Object {
          "Component": Object {},
          "content": "API Keys",
          "to": "/account/subaccounts/123/api-keys",
        },
      ]
    }
  />
  <PanelLoading />
</Page>
`;

exports[`keys path base props 1`] = `
<Page
  breadcrumbAction={
    Object {
      "Component": [Function],
      "content": "Subaccounts",
      "to": "/account/subaccounts",
    }
  }
  empty={Object {}}
  title="Bob Evans, the restaurant. (123)"
>
  <Tabs
    connectBelow={true}
    selected={1}
    tabs={
      Array [
        Object {
          "Component": Object {},
          "content": "Details",
          "to": "/account/subaccounts/123",
        },
        Object {
          "Component": Object {},
          "content": "API Keys",
          "to": "/account/subaccounts/123/api-keys",
        },
      ]
    }
  />
  <Switch>
    <Route
      exact={true}
      path="/account/subaccounts/123"
      render={[Function]}
    />
    <Route
      path="/account/subaccounts/123/api-keys"
      render={[Function]}
    />
  </Switch>
</Page>
`;

exports[`keys path loading 1`] = `
<Page
  breadcrumbAction={
    Object {
      "Component": [Function],
      "content": "Subaccounts",
      "to": "/account/subaccounts",
    }
  }
  empty={Object {}}
  title="loading..."
>
  <Tabs
    connectBelow={true}
    selected={1}
    tabs={
      Array [
        Object {
          "Component": Object {},
          "content": "Details",
          "to": "/account/subaccounts/123",
        },
        Object {
          "Component": Object {},
          "content": "API Keys",
          "to": "/account/subaccounts/123/api-keys",
        },
      ]
    }
  />
  <PanelLoading />
</Page>
`;

exports[`on create scenario should show api key banner on new key 1`] = `
<Page
  breadcrumbAction={
    Object {
      "Component": [Function],
      "content": "Subaccounts",
      "to": "/account/subaccounts",
    }
  }
  empty={Object {}}
  title="Bob Evans, the restaurant. (123)"
>
  <Connect(ApiKeySuccessBanner)
    title="Don't Forget Your API Key"
  />
  <Tabs
    connectBelow={true}
    selected={0}
    tabs={
      Array [
        Object {
          "Component": Object {},
          "content": "Details",
          "to": "/account/subaccounts/123",
        },
        Object {
          "Component": Object {},
          "content": "API Keys",
          "to": "/account/subaccounts/123/api-keys",
        },
      ]
    }
  />
  <Switch>
    <Route
      exact={true}
      path="/account/subaccounts/123"
      render={[Function]}
    />
    <Route
      path="/account/subaccounts/123/api-keys"
      render={[Function]}
    />
  </Switch>
</Page>
`;
